- пофикшен баг с поиском в сервисе blog - обновлен клиент blog  и сваггер в API-GW - обновлен клиент blog  и сваггер в tg-analytics
