# src/go/api-gw/pkg/models/dto_dto_business_log.go
@@ -1,184 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// DtoDtoBusinessLog dto dto business log
-//
-// swagger:model dto.DtoBusinessLog
-type DtoDtoBusinessLog struct {
-
-	// context
-	Context string `json:"context,omitempty"`
-
-	// context str
-	ContextStr string `json:"context_str,omitempty"`
-
-	// description
-	Description string `json:"description,omitempty"`
-
-	// user, context
-	Entity string `json:"entity,omitempty"`
-
-	// userID or ContextID
-	EntityID string `json:"entity_id,omitempty"`
-
-	// Timestamp   time.Time `json:"timestamp,omitzero" gorm:"column:timestamp;type:timestamp with time zone;not null"`
-	EventType string `json:"event_type,omitempty"`
-
-	// new value
-	NewValue *DtoValue `json:"new_value,omitempty"`
-
-	// old value
-	OldValue *DtoValue `json:"old_value,omitempty"`
-
-	// user name
-	UserName string `json:"user_name,omitempty"`
-
-	// SA, CA
-	UserRole string `json:"user_role,omitempty"`
-}
-
-// Validate validates this dto dto business log
-func (m *DtoDtoBusinessLog) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateNewValue(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateOldValue(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *DtoDtoBusinessLog) validateNewValue(formats strfmt.Registry) error {
-	if swag.IsZero(m.NewValue) { // not required
-		return nil
-	}
-
-	if m.NewValue != nil {
-		if err := m.NewValue.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("new_value")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("new_value")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *DtoDtoBusinessLog) validateOldValue(formats strfmt.Registry) error {
-	if swag.IsZero(m.OldValue) { // not required
-		return nil
-	}
-
-	if m.OldValue != nil {
-		if err := m.OldValue.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("old_value")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("old_value")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-// ContextValidate validate this dto dto business log based on the context it is used
-func (m *DtoDtoBusinessLog) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.contextValidateNewValue(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.contextValidateOldValue(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *DtoDtoBusinessLog) contextValidateNewValue(ctx context.Context, formats strfmt.Registry) error {
-
-	if m.NewValue != nil {
-
-		if swag.IsZero(m.NewValue) { // not required
-			return nil
-		}
-
-		if err := m.NewValue.ContextValidate(ctx, formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("new_value")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("new_value")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *DtoDtoBusinessLog) contextValidateOldValue(ctx context.Context, formats strfmt.Registry) error {
-
-	if m.OldValue != nil {
-
-		if swag.IsZero(m.OldValue) { // not required
-			return nil
-		}
-
-		if err := m.OldValue.ContextValidate(ctx, formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("old_value")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("old_value")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *DtoDtoBusinessLog) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *DtoDtoBusinessLog) UnmarshalBinary(b []byte) error {
-	var res DtoDtoBusinessLog
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
